# paisa_vasool_auth_service

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  entrypoint.sh  pyproject.toml
requirements/: requirements.txt
src/: main.py
src/api/rest/middleware/: __init__.py  cors_middleware.py  logging_middleware.py
src/api/rest/routes/: auth.py  health.py
src/config/: settings.py
src/constants/: __init__.py  auth_constants.py
src/core/exceptions/: __init__.py  exceptions.py  handlers.py
src/core/services/: __init__.py  auth_service.py
src/data/clients/: __init__.py  postgres_client.py
src/data/migrations/: runner.py
src/data/migrations/v1/: 0000_bootstrap.sql
src/data/migrations/v1/versions/: 0001_create_users.sql  0002_create_refresh_token.sql  0003_create_invoice_data.sql  0004_create_payment_detail.sql  0006_create_email_inbox.sql  0007_create_email_attachments.sql  0008_create_dispute_master.sql  0009_create_matching_payment_invoice.sql  0010_create_dispute_ai_analysis.sql  0011_create_analysis_supporting_refs.sql  0012_create_dispute_memory_episode.sql  0013_create_dispute_memory_summary.sql  (+10 more)
src/data/models/postgres/: __init__.py  auth_models.py  domain_models.py  models.py
src/data/repositories/: __init__.py  auth_repository.py  role_repository.py  token_repository.py  user_repository.py
src/data/seeds/: seed_admin.py
src/observability/logging/: logger.py
src/schemas/: __init__.py  auth_schemas.py  request_schemas.py  response_schemas.py
src/utils/: __init__.py  get_hash_password.py  jwt_utils.py
